--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,8 +10,7 @@
 		</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 		<link
-		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> 
 		{% block stylesheets %}
 			{# {{ encore_entry_link_tags('app') }} #}
 			<link rel="stylesheet" href="{{ asset('build/app.css') }}">
@@ -32,19 +31,19 @@
 						<li>
 							<a href="/" class="nav-link px-2 text-secondary">Home</a>
 						</li>
-						<li>
+						{# <li>
 							<a href="/tasks" class="nav-link px-2 text-white">Tasks</a>
-						</li>
+						</li> #}
 						<li>
 							<a href="/repair_works" class="nav-link px-2 text-white">Repair works</a>
 						</li>
-						<li>
+						{# <li>
 							<a href="#" class="nav-link px-2 text-white">About</a>
-						</li>
+						</li> #}
 					</ul>
-					<form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+					{# <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
 						<input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-					</form>
+					</form> #}
 					{% block login %}
 						<div class="text-end">
 							<button type="button" class="btn btn-outline-light me-2">Login</button>
@@ -59,10 +58,10 @@
 
 		<footer class="footer mt-auto py-3 bg-light">
 			<div class="container">
-				<span class="text-muted">Place sticky footer content here.</span>
+				<span class="text-muted"><i>SIA Lep Energy</i></span>
 			</div>
-		</footer>
+		</footer> 
 		
-		<script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+		{# <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> #}
 	</body>
 </html>
