--- a/templates/repairWorks.html.twig
+++ b/templates/repairWorks.html.twig
@@ -1,13 +1,15 @@
 {% extends "./base.html.twig" %}
 {% block login %}{% endblock %}
+{% form_theme form 'bootstrap_5_layout.html.twig' %}
 {% block body %}
-	<div class="w-4/5 m-auto pt-40">
-
-		{{ form_start(form) }}
-		{{ form_widget(form) }}
-		<button type="submit" class="uppercase mt-15 bg-blue-500 text-gray-100 text-lg font-extrabold py-4 px-8 rounded-3xl">
-			Submit Post
-		</button>
-		{{ form_end(form) }}
+	<div class="container">
+		<div class="d-flex flex-column">
+			<div class="align-self-center" style="margin-top: 150px">
+				{{ form_start(form) }}
+				{{ form_widget(form) }}
+				<button type="submit" class="btn btn-primary rounded-pill px-3 align-self-center">Upload</button>
+				{{ form_end(form) }}
+			</div>
+		</div>
 	</div>
 {% endblock %}
