--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,12 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>
 			{% block title %}
-				Welcome to Oas Crm!
+				Oas
 			{% endblock %}
 		</title>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-		<link
-		rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>"> 
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
 		{% block stylesheets %}
 			{# {{ encore_entry_link_tags('app') }} #}
 			<link rel="stylesheet" href="{{ asset('build/app.css') }}">
@@ -29,21 +28,21 @@
 					</a>
 					<ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
 						<li>
-							<a href="/" class="nav-link px-2 text-secondary">Home</a>
+							<a href="/" class="nav-link px-2">Home</a>
 						</li>
 						{# <li>
-							<a href="/tasks" class="nav-link px-2 text-white">Tasks</a>
-						</li> #}
+													<a href="/tasks" class="nav-link px-2 text-white">Tasks</a>
+												</li> #}
 						<li>
-							<a href="/repair_works" class="nav-link px-2 text-white">Repair works</a>
+							<a href="/repair_works" class="nav-link px-2">Repair works</a>
 						</li>
 						{# <li>
-							<a href="#" class="nav-link px-2 text-white">About</a>
-						</li> #}
+													<a href="#" class="nav-link px-2 text-white">About</a>
+												</li> #}
 					</ul>
 					{# <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-						<input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
-					</form> #}
+											<input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+										</form> #}
 					{% block login %}
 						<div class="text-end">
 							<button type="button" class="btn btn-outline-light me-2">Login</button>
@@ -54,14 +53,18 @@
 			</div>
 		</header>
 
-		{% block body %}{% endblock %}
+		{% block body %}
+			<img src="{{asset('build/images/maintenance.4aa27bfb.jpg')}}" style="height: 80vh; width: 100vw; object-fit: contain;">
+		{% endblock %}
 
 		<footer class="footer mt-auto py-3 bg-light">
 			<div class="container">
-				<span class="text-muted"><i>SIA Lep Energy</i></span>
+				<span class="text-muted">
+					<i>SIA Lep Energy</i>
+				</span>
 			</div>
-		</footer> 
-		
+		</footer>
+
 		{# <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> #}
 	</body>
 </html>
