--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-    background-color: rgba(199, 197, 197, 0.994);
+    /* background-color: rgba(199, 197, 197, 0.994); */
     margin-bottom: 60px;
 }
 
