--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,14 +31,11 @@
 							<a href="/" class="nav-link px-2">Home</a>
 						</li>
 						{# <li>
-													<a href="/tasks" class="nav-link px-2 text-white">Tasks</a>
-												</li> #}
+							<a href="/tasks" class="nav-link px-2">Tasks</a>
+						</li> #}
 						<li>
 							<a href="/repair_works" class="nav-link px-2">Repair works</a>
 						</li>
-						{# <li>
-													<a href="#" class="nav-link px-2 text-white">About</a>
-												</li> #}
 					</ul>
 					{# <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
 											<input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
