First working page (Fleetcomplete tasks) template

--- a/templates/partials/left-sidebar.html.twig
+++ b/templates/partials/left-sidebar.html.twig
@@ -28,11 +28,11 @@
 
         <!-- User box -->
         <div class="user-box text-center">
-            <img src="{{ asset('build/assets/images/users/avatar-1.jpg') }}" alt="user-img" title="Mat Helme"
+            <img src="{{ asset('build/assets/images/users/avatar-lep.jpg') }}" alt="user-img" title="Mat Helme"
                 class="rounded-circle avatar-md">
             <div class="dropdown">
                 <a href="#" class="text-reset dropdown-toggle h5 mt-2 mb-1 d-block fw-medium"
-                    data-bs-toggle="dropdown">Nikhil Patel</a>
+                    data-bs-toggle="dropdown">Lep Energy</a>
                 <div class="dropdown-menu user-pro-dropdown">
 
                     <!-- item-->
@@ -69,9 +69,9 @@
 
             <ul id="side-menu">
 
-                <li class="menu-title">Navigation</li>
+                {# <li class="menu-title">Navigation</li> #}
                 
-                <li>
+                {# <li>
                     <a href="#sidebarDashboards" data-bs-toggle="collapse" aria-expanded="false" aria-controls="sidebarDashboards" class="waves-effect">
                         <i class="ri-dashboard-line"></i>
                         <span class="badge bg-success rounded-pill float-end">3</span>
@@ -200,7 +200,7 @@
                         <i class="ri-building-4-line"></i>
                         <span> Companies </span>
                     </a>
-                </li>
+                </li> #}
 
                 <li>
                     <a href="#sidebarTasks" data-bs-toggle="collapse" aria-expanded="false" aria-controls="sidebarTasks">
@@ -211,18 +211,15 @@
                     <div class="collapse" id="sidebarTasks">
                         <ul class="nav-second-level">
                             <li>
-                                <a href="task-list.html">List</a>
+                                <a href="/tasks">Fleetcomplete</a>
                             </li>
-                            <li>
-                                <a href="task-details.html">Details</a>
-                            </li>
-                            <li>
-                                <a href="task-kanban-board.html">Kanban Board</a>
-                            </li>
+                            {# <li>
+                                <a href="task-details.html">Repair Works</a>
+                            </li> #}
                         </ul>
                     </div>
                 </li>
-
+{# 
                 <li>
                     <a href="apps-tickets.html">
                         <i class="ri-customer-service-2-line"></i>
@@ -694,7 +691,7 @@
                         <i class="ri-honour-line"></i>
                         <span> Test </span>
                     </a>
-                </li>
+                </li> #}
 
             </ul>
 
