--- a/templates/partials/topbar.html.twig
+++ b/templates/partials/topbar.html.twig
@@ -264,9 +264,9 @@
     
             <li class="dropdown notification-list topbar-dropdown">
                 <a class="nav-link dropdown-toggle nav-user me-0 waves-effect waves-light" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                     <img src="{{ asset('build/assets/images/users/avatar-1.jpg') }}" alt="user-image" class="rounded-circle">
+                     <img src="{{ asset('build/assets/images/users/avatar-lep.jpg') }}" alt="user-image" class="rounded-circle">
                     <span class="pro-user-name ms-1">
-                        Nik Patel <i class="mdi mdi-chevron-down"></i> 
+                        Lep Energy <i class="mdi mdi-chevron-down"></i> 
                     </span>
                 </a>
                 <div class="dropdown-menu dropdown-menu-end profile-dropdown ">
@@ -360,7 +360,7 @@
                 <!-- End mobile menu toggle-->
             </li>   
             
-            <li class="dropdown d-none d-xl-block">
+            {# <li class="dropdown d-none d-xl-block">
                 <a class="nav-link dropdown-toggle waves-effect waves-light" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
                     Create New
                     <i class="mdi mdi-chevron-down"></i> 
@@ -399,9 +399,9 @@
                     </a>
     
                 </div>
-            </li>
+            </li> #}
     
-            <li class="dropdown dropdown-mega d-none d-xl-block">
+            {# <li class="dropdown dropdown-mega d-none d-xl-block">
                 <a class="nav-link dropdown-toggle waves-effect waves-light" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
                     Mega Menu
                     <i class="mdi mdi-chevron-down"></i> 
@@ -503,7 +503,7 @@
                     </div>
     
                 </div>
-            </li>
+            </li> #}
         </ul>
         <div class="clearfix"></div>
     </div>
