--- a/templates/partials/left-sidebar.html.twig
+++ b/templates/partials/left-sidebar.html.twig
@@ -211,7 +211,7 @@
                     <div class="collapse" id="sidebarTasks">
                         <ul class="nav-second-level">
                             <li>
-                                <a href="/tasks">Fleetcomplete</a>
+                                <a href="/tasks_fc">Fleetcomplete</a>
                             </li>
                             {# <li>
                                 <a href="task-details.html">Repair Works</a>
