--- a/templates/tasks/fleetcomplete.html.twig
+++ b/templates/tasks/fleetcomplete.html.twig
@@ -18,25 +18,26 @@
 					<table id="basic-datatable" class="table dt-responsive nowrap w-100">
 						<thead>
 							<tr>
-								<th>Name</th>
-								<th>Position</th>
-								<th>Office</th>
-								<th>Age</th>
-								<th>Start date</th>
-								<th>Salary</th>
+								<th>Address</th>
+								<th>Description</th>
+								<th>Status</th>
+								<th>Date</th>
+								{# <th>Created at</th> #}
 							</tr>
 						</thead>
 
 						<tbody>
-							<tr>
-								<td>Tiger Nixon</td>
-								<td>System Architect</td>
-								<td>Edinburgh</td>
-								<td>61</td>
-								<td>2011/04/25</td>
-								<td>$320,800</td>
-							</tr>
-							<tr>
+							{# {% for task in tasks %} #}
+							{# <tr>
+								<td>{{ task.getAddress() }}</td>
+								<td>{{ task.getDescription() | length > 120 ? task.getDescription()[:120] ~ '...' : task.getDescription() }}</td>
+								<td>{{ task.getStatus() }}</td>
+								<td>{{ task.getTimestamp() }}</td> #}
+								{# <td>{{ task.getCreatedAtTimestamp() }}</td> #}
+							{# </tr> #}
+							{# {% endfor %} #}
+							
+							{# <tr>
 								<td>Garrett Winters</td>
 								<td>Accountant</td>
 								<td>Tokyo</td>
@@ -139,135 +140,7 @@
 								<td>43</td>
 								<td>2012/12/18</td>
 								<td>$313,500</td>
-							</tr>
-							<tr>
-								<td>Tatyana Fitzpatrick</td>
-								<td>Regional Director</td>
-								<td>London</td>
-								<td>19</td>
-								<td>2010/03/17</td>
-								<td>$385,750</td>
-							</tr>
-							<tr>
-								<td>Michael Silva</td>
-								<td>Marketing Designer</td>
-								<td>London</td>
-								<td>66</td>
-								<td>2012/11/27</td>
-								<td>$198,500</td>
-							</tr>
-							<tr>
-								<td>Paul Byrd</td>
-								<td>Chief Financial Officer (CFO)</td>
-								<td>New York</td>
-								<td>64</td>
-								<td>2010/06/09</td>
-								<td>$725,000</td>
-							</tr>
-							<tr>
-								<td>Gloria Little</td>
-								<td>Systems Administrator</td>
-								<td>New York</td>
-								<td>59</td>
-								<td>2009/04/10</td>
-								<td>$237,500</td>
-							</tr>
-							<tr>
-								<td>Bradley Greer</td>
-								<td>Software Engineer</td>
-								<td>London</td>
-								<td>41</td>
-								<td>2012/10/13</td>
-								<td>$132,000</td>
-							</tr>
-							<tr>
-								<td>Dai Rios</td>
-								<td>Personnel Lead</td>
-								<td>Edinburgh</td>
-								<td>35</td>
-								<td>2012/09/26</td>
-								<td>$217,500</td>
-							</tr>
-							<tr>
-								<td>Jenette Caldwell</td>
-								<td>Development Lead</td>
-								<td>New York</td>
-								<td>30</td>
-								<td>2011/09/03</td>
-								<td>$345,000</td>
-							</tr>
-							<tr>
-								<td>Yuri Berry</td>
-								<td>Chief Marketing Officer (CMO)</td>
-								<td>New York</td>
-								<td>40</td>
-								<td>2009/06/25</td>
-								<td>$675,000</td>
-							</tr>
-							<tr>
-								<td>Caesar Vance</td>
-								<td>Pre-Sales Support</td>
-								<td>New York</td>
-								<td>21</td>
-								<td>2011/12/12</td>
-								<td>$106,450</td>
-							</tr>
-							<tr>
-								<td>Doris Wilder</td>
-								<td>Sales Assistant</td>
-								<td>Sidney</td>
-								<td>23</td>
-								<td>2010/09/20</td>
-								<td>$85,600</td>
-							</tr>
-							<tr>
-								<td>Angelica Ramos</td>
-								<td>Chief Executive Officer (CEO)</td>
-								<td>London</td>
-								<td>47</td>
-								<td>2009/10/09</td>
-								<td>$1,200,000</td>
-							</tr>
-							<tr>
-								<td>Gavin Joyce</td>
-								<td>Developer</td>
-								<td>Edinburgh</td>
-								<td>42</td>
-								<td>2010/12/22</td>
-								<td>$92,575</td>
-							</tr>
-							<tr>
-								<td>Jennifer Chang</td>
-								<td>Regional Director</td>
-								<td>Singapore</td>
-								<td>28</td>
-								<td>2010/11/14</td>
-								<td>$357,650</td>
-							</tr>
-							<tr>
-								<td>Brenden Wagner</td>
-								<td>Software Engineer</td>
-								<td>San Francisco</td>
-								<td>28</td>
-								<td>2011/06/07</td>
-								<td>$206,850</td>
-							</tr>
-							<tr>
-								<td>Fiona Green</td>
-								<td>Chief Operating Officer (COO)</td>
-								<td>San Francisco</td>
-								<td>48</td>
-								<td>2010/03/11</td>
-								<td>$850,000</td>
-							</tr>
-							<tr>
-								<td>Shou Itou</td>
-								<td>Regional Marketing</td>
-								<td>Tokyo</td>
-								<td>20</td>
-								<td>2011/08/14</td>
-								<td>$163,000</td>
-							</tr>
+							</tr> #}
 						</tbody>
 					</table>
 
@@ -298,6 +171,6 @@
 	<script src="{{ asset('build/assets/libs/datatables.net-keytable/js/dataTables.keyTable.min.js') }}"></script>
 	<script src="{{ asset('build/assets/libs/datatables.net-select/js/dataTables.select.min.js') }}"></script>
 	{# <script src="{{ asset('build/assets/libs/pdfmake/build/pdfmake.min.js') }}"></script> #}
-	{# <script src="{{ asset('build/assets/libs/pdfmake/build/vfs_fonts.js') }}"></script> #}
+{# <script src="{{ asset('build/assets/libs/pdfmake/build/vfs_fonts.js') }}"></script> #}
 	<!-- third party js ends -->
 {% endblock %}
