--- a/templates/tasks/fleetcomplete.html.twig
+++ b/templates/tasks/fleetcomplete.html.twig
@@ -22,143 +22,33 @@
 								<th>Description</th>
 								<th>Status</th>
 								<th>Date</th>
-								{# <th>Created at</th> #}
+								<th>Time</th>
+								<th>Postal code</th>
 							</tr>
 						</thead>
 
 						<tbody>
-							{# {% for task in tasks %} #}
-							{# <tr>
-								<td>{{ task.getAddress() }}</td>
-								<td>{{ task.getDescription() | length > 120 ? task.getDescription()[:120] ~ '...' : task.getDescription() }}</td>
-								<td>{{ task.getStatus() }}</td>
-								<td>{{ task.getTimestamp() }}</td> #}
-								{# <td>{{ task.getCreatedAtTimestamp() }}</td> #}
-							{# </tr> #}
-							{# {% endfor %} #}
-							
-							{# <tr>
-								<td>Garrett Winters</td>
-								<td>Accountant</td>
-								<td>Tokyo</td>
-								<td>63</td>
-								<td>2011/07/25</td>
-								<td>$170,750</td>
-							</tr>
-							<tr>
-								<td>Ashton Cox</td>
-								<td>Junior Technical Author</td>
-								<td>San Francisco</td>
-								<td>66</td>
-								<td>2009/01/12</td>
-								<td>$86,000</td>
-							</tr>
-							<tr>
-								<td>Cedric Kelly</td>
-								<td>Senior Javascript Developer</td>
-								<td>Edinburgh</td>
-								<td>22</td>
-								<td>2012/03/29</td>
-								<td>$433,060</td>
-							</tr>
-							<tr>
-								<td>Airi Satou</td>
-								<td>Accountant</td>
-								<td>Tokyo</td>
-								<td>33</td>
-								<td>2008/11/28</td>
-								<td>$162,700</td>
-							</tr>
-							<tr>
-								<td>Brielle Williamson</td>
-								<td>Integration Specialist</td>
-								<td>New York</td>
-								<td>61</td>
-								<td>2012/12/02</td>
-								<td>$372,000</td>
-							</tr>
-							<tr>
-								<td>Herrod Chandler</td>
-								<td>Sales Assistant</td>
-								<td>San Francisco</td>
-								<td>59</td>
-								<td>2012/08/06</td>
-								<td>$137,500</td>
-							</tr>
-							<tr>
-								<td>Rhona Davidson</td>
-								<td>Integration Specialist</td>
-								<td>Tokyo</td>
-								<td>55</td>
-								<td>2010/10/14</td>
-								<td>$327,900</td>
-							</tr>
-							<tr>
-								<td>Colleen Hurst</td>
-								<td>Javascript Developer</td>
-								<td>San Francisco</td>
-								<td>39</td>
-								<td>2009/09/15</td>
-								<td>$205,500</td>
-							</tr>
-							<tr>
-								<td>Sonya Frost</td>
-								<td>Software Engineer</td>
-								<td>Edinburgh</td>
-								<td>23</td>
-								<td>2008/12/13</td>
-								<td>$103,600</td>
-							</tr>
-							<tr>
-								<td>Jena Gaines</td>
-								<td>Office Manager</td>
-								<td>London</td>
-								<td>30</td>
-								<td>2008/12/19</td>
-								<td>$90,560</td>
-							</tr>
-							<tr>
-								<td>Quinn Flynn</td>
-								<td>Support Lead</td>
-								<td>Edinburgh</td>
-								<td>22</td>
-								<td>2013/03/03</td>
-								<td>$342,000</td>
-							</tr>
-							<tr>
-								<td>Charde Marshall</td>
-								<td>Regional Director</td>
-								<td>San Francisco</td>
-								<td>36</td>
-								<td>2008/10/16</td>
-								<td>$470,600</td>
-							</tr>
-							<tr>
-								<td>Haley Kennedy</td>
-								<td>Senior Marketing Designer</td>
-								<td>London</td>
-								<td>43</td>
-								<td>2012/12/18</td>
-								<td>$313,500</td>
-							</tr> #}
+							{% for task in tasks %}
+								<tr>
+									<td>{{ task.getAddress() }}</td>
+									<td>{{ task.getDescription() | length > 120 ? task.getDescription()[:120] ~ '...' : task.getDescription() }}</td>
+									<td>{{ task.getStatus() }}</td>
+									<td>{{ task.getDate() }}</td>
+									<td>{{ task.getTime() }}</td>
+									<td>{{ task.getPostalCode() }}</td>
+								</tr>
+							{% endfor %}
 						</tbody>
 					</table>
-
 				</div>
-				<!-- end card body-->
 			</div>
-			<!-- end card -->
 		</div>
-		<!-- end col-->
 	</div>
 {% endblock %}
 
 {% block javascript %}
 	{{ parent() }}
 
-	<script src="{{ asset('build/assets/js/pages/datatables.init.js') }}"></script>
-
-	<!-- third party js -->
 	<script src="{{ asset('build/assets/libs/datatables.net/js/jquery.dataTables.min.js') }}"></script>
 	<script src="{{ asset('build/assets/libs/datatables.net-bs5/js/dataTables.bootstrap5.min.js') }}"></script>
 	<script src="{{ asset('build/assets/libs/datatables.net-responsive/js/dataTables.responsive.min.js') }}"></script>
@@ -170,7 +60,8 @@
 	<script src="{{ asset('build/assets/libs/datatables.net-buttons/js/buttons.print.min.js') }}"></script>
 	<script src="{{ asset('build/assets/libs/datatables.net-keytable/js/dataTables.keyTable.min.js') }}"></script>
 	<script src="{{ asset('build/assets/libs/datatables.net-select/js/dataTables.select.min.js') }}"></script>
-	{# <script src="{{ asset('build/assets/libs/pdfmake/build/pdfmake.min.js') }}"></script> #}
-{# <script src="{{ asset('build/assets/libs/pdfmake/build/vfs_fonts.js') }}"></script> #}
-	<!-- third party js ends -->
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.8.4/moment.min.js" type="text/javascript"></script>
+	<script src="https://cdn.datatables.net/plug-ins/1.10.19/sorting/datetime-moment.js" type="text/javascript"></script>
+	<script src="{{ asset('build/assets/js/pages/datatables.init.js') }}"></script>
 {% endblock %}
